test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/void/assign_void_rval.plx
#  can't convert void to another type by assignment 
pub fn main(none) i32 {
    a: i32 = 10
    a = cast<none>(20)
    return false
}
